# huawei-cloud-ops-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
script/price/: get_ecs_price.py
script/price/backup/: get_ecs_price_sqllite.py
src/huawei_cloud_ops_mcp_server/: __main__.py  config.py  logger.py  server.py  utils.py
src/huawei_cloud_ops_mcp_server/common/: flow.py  register.py  utils.py
src/huawei_cloud_ops_mcp_server/config/: __init__.py  base.py  hw.py  log.py  logger.py  mcp.py
src/huawei_cloud_ops_mcp_server/huaweicloud/: config.py  signer.py  utils.py
src/huawei_cloud_ops_mcp_server/huaweicloud/apidocs/: CES.md  CSS.md  DCS.md  DDS.md  DNS.md  ECS.md  EIP.md  ELB.md  EVS.md  LTS.md  OBS.md  RDS.md  VPC.md  __init__.py
src/huawei_cloud_ops_mcp_server/huaweicloud/apidocs/metrics/: AGT_ECS.md  SYS_DCS.md  SYS_DDS.md  SYS_ES.md  SYS_EVS.md  SYS_RDS.md  SYS_VPC.md
src/huawei_cloud_ops_mcp_server/huaweicloud/pricedocs/: __init__.py
src/huawei_cloud_ops_mcp_server/huaweicloud/pricedocs/pricecomp/: ECS.md
src/huawei_cloud_ops_mcp_server/huaweicloud/pricedocs/pricecomp‌/: ECS.md
src/huawei_cloud_ops_mcp_server/huaweicloud/static/: API_OPERATIONS.md  PROMPT_UNDERSTANDING.md  __init__.py
src/huawei_cloud_ops_mcp_server/tools/: api_tools.py  common_tools.py  price_tools.py  workflow_tools.py
tests/: test_tool_hooks.py
