[project]
name = "huawei-cloud-ops-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastmcp>=2.13.0.2",
    "httpx>=0.28.1",
    "playwright>=1.56.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.44",
    "tinydb>=4.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
